fix(pagination): add spacing to prevent outline overlap

--- a/src/components/reusable/pagination/pagination-navigation-buttons.scss
+++ b/src/components/reusable/pagination/pagination-navigation-buttons.scss
@@ -5,4 +5,5 @@
   @include typography.type-body-02;
   display: flex;
   align-items: center;
+  gap: 6px;
 }
