--- a/src/components/reusable/pagination/pagination-page-size-dropdown.scss
+++ b/src/components/reusable/pagination/pagination-page-size-dropdown.scss
@@ -5,6 +5,7 @@
   @include typography.type-body-02;
   display: flex;
   align-items: center;
+  gap: 6px;
 }
 
 kyn-dropdown {
